# ehclone

./: .gitignore  Dockerfile  pyproject.toml
appdata/: config.example.json
appdata/aria2/: aria2.conf
src/ehclone/: config.py  logger.py  main.py
src/ehclone/core/: eh_session.py  sync_index.py  sync_thumbs.py
src/ehclone/db/: entities.py  session.py
src/ehclone/db/crud/: gallery.py  thumb.py
src/ehclone/downloader/: aria2_client.py
src/ehclone/vectorizer/: mobile_net_v3.py
